Removed duplicate word in copyright section.

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <!-- COPYRIGHT SECTION -->
     <section id="copyright-section">
         <div class="container copyright-container">
-            <p>Copyright © 2018 revera - Just another demo Sites site.<br>
+            <p>Copyright © 2018 revera - Just another demo site.<br>
                 | Revera Theme</p>
         </div>
     </section>
